// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterWallets should render 1`] = `
<div>
  <div
    class="flex flex-col text-left"
    data-testid="FilterWallets"
  >
    <div
      class="mb-8"
    >
      <div
        class="font-semibold text-theme-secondary-text"
      >
        Filter Cryptoasset
      </div>
      <div
        class="mt-1 text-sm text-theme-secondary-500"
      >
        Select the types of cryptoassets
      </div>
    </div>
    <div
      class="space-y-6"
    />
    <div
      class="my-8 border-t border-dotted border-theme-secondary-300 dark:border-theme-secondary-800"
    />
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-between items-center"
      >
        <div
          class="font-semibold text-theme-secondary-text"
        >
          Your Wallets
        </div>
        <div
          class="relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex justify-end items-center cursor-pointer text-theme-secondary-text"
              data-testid="filter-wallets__wallets"
            >
              <span
                class="inline-block mr-2 font-semibold"
              />
              <div
                class="sc-bdfBwQ kJrqvM transition-transform "
                height="5"
                width="8"
              >
                <svg>
                  chevron-down.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-secondary-500"
      >
        Select the display of your wallets
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterWallets should render with networks selection 1`] = `
<div>
  <div
    class="flex flex-col text-left"
    data-testid="FilterWallets"
  >
    <div
      class="mb-8"
    >
      <div
        class="font-semibold text-theme-secondary-text"
      >
        Filter Cryptoasset
      </div>
      <div
        class="mt-1 text-sm text-theme-secondary-500"
      >
        Select the types of cryptoassets
      </div>
    </div>
    <div
      class="space-y-6"
    >
      <div
        data-testid="FilterNetwork"
      >
        <div
          class="mb-2 text-sm font-bold text-theme-secondary-400"
        >
          Public Networks
        </div>
        <ul
          class="inline-block"
          data-testid="NetworkOptions"
        >
          <li
            class="inline-block mr-5 cursor-pointer"
            data-testid="NetworkOption__ARK"
          >
            <div
              class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
              <span
                class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                <span />
              </span>
            </div>
          </li>
          <li
            class="inline-block mr-5 cursor-pointer"
            data-testid="NetworkOption__ETH"
          >
            <div
              class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  eth.svg
                </svg>
              </div>
              <span
                class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
              >
                <div
                  class="sc-bdfBwQ fdfkzt"
                  height="12"
                  width="12"
                >
                  <svg>
                    checkmark.svg
                  </svg>
                </div>
                <span />
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="my-8 border-t border-dotted border-theme-secondary-300 dark:border-theme-secondary-800"
    />
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-between items-center"
      >
        <div
          class="font-semibold text-theme-secondary-text"
        >
          Your Wallets
        </div>
        <div
          class="relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex justify-end items-center cursor-pointer text-theme-secondary-text"
              data-testid="filter-wallets__wallets"
            >
              <span
                class="inline-block mr-2 font-semibold"
              />
              <div
                class="sc-bdfBwQ kJrqvM transition-transform "
                height="5"
                width="8"
              >
                <svg>
                  chevron-down.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-secondary-500"
      >
        Select the display of your wallets
      </div>
    </div>
  </div>
</div>
`;
